SXPR-91 Add missing cleanup of published resources tree